# automatic-pancake

./: Cargo.toml  README.md
bingo_card/: Cargo.toml
bingo_card/src/: main.rs
bmi/src/: main.rs
dice/src/: main.rs
eiwa/: Cargo.toml
eiwa/src/: main.rs
fibonacci_iterator/src/: main.rs
file_search/: Cargo.toml
file_search/src/: main.rs
itimatu/: Cargo.toml
itimatu/src/: main.rs
maze/src/: main.rs
prime_iterator/src/: main.rs
question/src/: main.rs
single_list/src/: main.rs  slist.rs
src/: caesar.rs  main.rs  primes.rs
sum_args/src/: main.rs
thumb/: Cargo.toml
thumb/src/: main.rs
web_bmi/: Cargo.toml
web_bmi/src/: main.rs
