[package]
name = "automatic-pancake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["bingo_card", "bmi", "dice", "eiwa", "fibonacci_iterator", "file_search", "itimatu", "maze", "prime_iterator", "question", "sum_args", "thumb"]
